--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   },
   "homepage": "https://github.com/joordy/real-time-web-2021#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.0"
+    "express-handlebars": "^5.3.0",
+    "socket.io": "^4.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
