--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0",
+    "peer": "^0.6.1",
     "socket.io": "^4.0.1",
     "uuid": "^8.3.2"
   },
