--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0",
+    "franc": "^5.0.0",
+    "node-notifier": "^9.0.1",
+    "open": "^8.0.5",
     "peer": "^0.6.1",
     "socket.io": "^4.0.1",
+    "twit": "^2.2.11",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
