--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0",
     "franc": "^5.0.0",
+    "node-fetch": "^2.6.1",
     "node-notifier": "^9.0.1",
     "open": "^8.0.5",
     "peer": "^0.6.1",
