--- a/package.json
+++ b/package.json
@@ -20,17 +20,14 @@
   },
   "homepage": "https://github.com/joordy/real-time-web-2021#readme",
   "dependencies": {
-    "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0",
+    "express-openid-connect": "^2.3.1",
     "express-session": "^1.17.1",
     "express-socket.io-session": "^1.3.5",
     "moment": "^2.29.1",
-    "mongoose": "^5.12.5",
     "node-fetch": "^2.6.1",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
     "peer": "^0.6.1",
     "socket.io": "^4.0.1",
     "uuid": "^8.3.2"
