--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "real-time-web-2021",
   "version": "1.0.0",
   "description": "Real Time Web application",
-  "main": "server/index.js",
+  "main": "server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server/index.js",
-    "start": "node server/index.js"
+    "dev": "nodemon server/server.js",
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
